--- a/html/download.html
+++ b/html/download.html
@@ -11,7 +11,7 @@
     <main class="container">
       <section>
         <hgroup>
-          <h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1>
+          <a href="/" style="color: black; text-decoration: none;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
           <h6>Thank you for your patience. Your image is ready for download.</h6>
         </hgroup>
       </section>
