--- a/html/header.html
+++ b/html/header.html
@@ -2,7 +2,7 @@
 <nav>
   <ul></ul>
   <ul>
-    <h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1>
+    <a href="/" style="color: black;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
   </ul>
   <ul></ul>
 </nav>
