--- a/html/index.html
+++ b/html/index.html
@@ -11,17 +11,17 @@
     <main class="container">
       <section>
         <div id="intro">
-          <h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1>
+          <a href="/" style="color: black; text-decoration: none;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
           <img src="/assets/wallpaper.png" alt="sample image">
         </div>
       </section>
       <section>
         <div id="form">
           <p>Abstractify is a simple app that creates an abstracted version of your image.</p>
-          <p>Give it a try! In my experimentation, I have found that images depicting landscapes or scenery seem to yield the most aesthetically pleasing results, but feel free to try out any image you like!</p>
+          <p>Give it a try! <br><br>(In my experimentation, I have found that images depicting landscapes or scenery seem to yield the most aesthetically pleasing results, but feel free to try out any image you like!)</p>
           <form id="form" action="/upload" enctype="multipart/form-data" method="POST" >
             <div>
-                <input type="file" name="uploadFile" />
+                <input id="upload" type="file" name="uploadFile" />
             </div>
             <div>
               <p>Make sure that your image file is either a JPG or PNG file and less than 4mb in size.</p>
@@ -36,7 +36,6 @@
       let btn = document.getElementById("submit");
       btn.addEventListener("click", () => {
         let txt = btn.innerText;
-        console.log(txt)
         txt = 'Please wait while your image is being processed...';
         btn.setAttribute("aria-busy", "true");
         btn.innerText = txt;
