--- a/html/download.html
+++ b/html/download.html
@@ -10,12 +10,10 @@
   <body>
     <main class="container">
       <section>
-        <hgroup>
           <a href="/" style="color: black; text-decoration: none;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
-          <h6>Thank you for your patience. Your image is ready for download.</h6>
-        </hgroup>
       </section>
       <section>
+        <p>Thank you for your patience. Your image is ready for download.</p>
         <img src="{{.FileName}}" alt="your abstractified image">
       </section>
       <section>
