--- a/html/footer.html
+++ b/html/footer.html
@@ -3,7 +3,7 @@
   <nav>
     <ul></ul>
     <ul>
-      <h6>&copy; Copyright 2021 Joel Poh.</h6>
+      <h6>&copy; Copyright 2021 Joel Poh</h6>
     </ul>
     <ul></ul>
   </nav>
