refactor everything so that it works on GAE

--- a/html/download.html
+++ b/html/download.html
@@ -14,7 +14,7 @@
       </section>
       <section>
         <p>Thank you for your patience. Your image is ready for download.</p>
-        <img src="{{.FileName}}" alt="your abstractified image">
+        <img src="https://storage.googleapis.com/go-abstractify.appspot.com/{{.FileName}}" alt="your abstractified image">
       </section>
       <section>
         <form action="/download">
