--- a/html/index.html
+++ b/html/index.html
@@ -24,13 +24,16 @@
       <section>
         <div id="form">
           <p>Abstractify is a simple app that creates an abstracted version of your image.</p>
-          <p>Give it a try! <br><br>(In my experimentation, I have found that images depicting landscapes or scenery seem to yield the most aesthetically pleasing results, but feel free to try out any image you like!)</p>
+          <p>Give it a try!</p> 
           <form id="form" action="/upload" enctype="multipart/form-data" method="POST" >
+            <div>
+              <img id="preview" />
+            </div>
             <div>
                 <input id="upload" type="file" name="uploadFile" />
             </div>
             <div>
-              <p>Make sure that your image file is either a JPG or PNG file and less than 3mb in size.</p>
+              <p>Make sure that your image file is either a JPG or PNG file and less than 3mb in size. <br><br>Note that the image will be scaled to a maximum width of 1080px, which should still be sufficient for most purposes (like social media or small prints).</p> 
               <button type="submit" id="submit">Submit</button>
             </div>
           </form>
@@ -66,7 +69,40 @@
             } else {
                 btn.disabled = false;
             }
-        }
+
+          let imageFile = file[0];
+          var reader = new FileReader();
+              reader.onload = (e) => {
+              var img = document.createElement("img");
+                  img.onload = (event) => {
+                    var MAX_WIDTH = 640;
+                    var width = img.width;
+                    var height = img.height;
+
+                    if (width > MAX_WIDTH) {
+                      height = height * (MAX_WIDTH/width);
+                      width = MAX_WIDTH;
+                    }
+
+                    // Dynamically create a canvas element
+                    var canvas = document.createElement("canvas");
+                    canvas.width = width;
+                    canvas.height = height;
+
+                    // var canvas = document.getElementById("canvas");
+                    var ctx = canvas.getContext("2d");
+
+                    // Actual resizing
+                    ctx.drawImage(img, 0, 0, width, height);
+
+                    // Show resized image in preview element
+                    var dataurl = canvas.toDataURL(imageFile.type);
+                    document.getElementById("preview").src = dataurl;
+                  }
+              img.src = e.target.result;
+            }
+          reader.readAsDataURL(imageFile);
+        } 
       });
     </script>
     <script src="https://unpkg.com/notie"></script>
