--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
       <section>
         <div id="intro">
           <a href="/" style="color: black; text-decoration: none;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
-          <img src="/assets/wallpaper.png" alt="sample image">
+          <img src="/assets/2017_0611_16445100-abstractified.png" alt="sample image">
         </div>
       </section>
       <section>
@@ -33,7 +33,7 @@
                 <input id="upload" type="file" name="uploadFile" />
             </div>
             <div>
-              <p>Make sure that your image file is either a JPG or PNG file and less than 4 in size. <br><br>Note that the image will be scaled to a maximum width of 1080px, which should still be sufficient for most purposes (like social media or small prints).</p> 
+              <p>Make sure that your image file is either a JPG or PNG file and less than 4mb in size. <br><br>Note that the image will be scaled to a maximum width of 1080px, which should still be sufficient for most purposes (like social media or small prints).</p> 
               <button type="submit" id="submit">Submit</button>
             </div>
           </form>
