mv all assets to static

--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <title>Abstractify</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="/assets/pico.min.css" rel="stylesheet" />
+    <link href="/static/css/pico.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     <style>
@@ -18,7 +18,7 @@
       <section>
         <div id="intro">
           <a href="/" style="color: black; text-decoration: none;"><h1 style="font-family: 'Cedarville Cursive', cursive;">Abstractify</h1></a>
-          <img src="/assets/2017_0611_16445100-abstractified.png" alt="sample image">
+          <img src="/static/img/2017_0611_16445100-abstractified.png" alt="sample image">
         </div>
       </section>
       <section>
