--- a/html/download.html
+++ b/html/download.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/assets/pico.min.css" rel="stylesheet">
+    <link href="/static/css/pico.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
   </head>
   <body>
