--- a/html/index.html
+++ b/html/index.html
@@ -37,14 +37,14 @@
               <select id="shape" name="shape" required>
                 <option value="" selected>Select a shape</option>
                 <option value="Triangle">Triangle</option>
-                <option value="Quadrilateral">Quadrilateral</option>
+                <option value="Square">Square</option>
                 <option value="Pentagon">Pentagon</option>
                 <option value="Hexagon">Hexagon</option>
                 <option value="Octagon">Octagon</option>
                 <option value="Random">Random</option>
               </select>
              <label for="size">Size of shapes
-               <input type="range" min="1" max="5" id="size" name="size">
+               <input type="range" min="1" max="8" id="size" name="size">
              </label> 
              <fieldset>
                <label for="randomSizeOpt">
