update readme and index.html app description

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
       </section>
       <section>
         <div id="form">
-          <p>Abstractify is a simple app that creates an abstracted version of your image by recomposing the image using regular shapes.</p>
+          <p>Abstractify is a simple app that creates an abstracted version of an image by recomposing the image using regular shapes.</p>
           <p>Give it a try! Upload a JPG or PNG file that is less than 4mb in size, and tweak the settings below. Feel free to experiment with different settings to see how they change things!</p> 
           <form id="form" action="/upload" enctype="multipart/form-data" method="POST" >
             <div>
